--- a/index.html
+++ b/index.html
@@ -9,17 +9,24 @@
 <div class="container">
 <h2>Vrai ou Faux ?</h2>
 <p>
-           Pour chaque affirmation, cochez si elle est vraie ou fausse.<br>
-           Vous avez 15 minutes pour terminer !
+           Devant vous, un tableau de conformité et de non-conformité.
+           Commencez par rechercher tous les éléments importants présents dans la pièce pour comprendre la situation.
+           Ensuite, complétez la feuille posée devant vous avec vos premières hypothèses.
+           
+           Prenez le temps de discuter en équipe : confrontez vos idées, débattez des meilleures réponses.
+           Une fois votre décision prise, saisissez vos réponses sur la tablette pour valider votre choix.
+           
+           Attention : votre temps est compté…
+
 </p>
 <div id="timer" class="timer-container"></div>
 <form id="quiz-form">
 <table>
 <thead>
 <tr>
-<th>Affirmation</th>
-<th>Vrai</th>
-<th>Faux</th>
+<th>Nom du Contrôle</th>
+<th>Conforme</th>
+<th>Non Conforme</th>
 </tr>
 </thead>
 <tbody id="table-body">
