--- a/index.html
+++ b/index.html
@@ -8,17 +8,14 @@
 <body>
 <div class="container">
 <h2>Vrai ou Faux ?</h2>
-<p>
-           Devant vous, un tableau de conformité et de non-conformité.
-           Commencez par rechercher tous les éléments importants présents dans la pièce pour comprendre la situation.
-           Ensuite, complétez la feuille posée devant vous avec vos premières hypothèses.
-           
-           Prenez le temps de discuter en équipe : confrontez vos idées, débattez des meilleures réponses.
-           Une fois votre décision prise, saisissez vos réponses sur la tablette pour valider votre choix.
-           
-           Attention : votre temps est compté…
-
-</p>
+<div class="instructions">
+<p>Devant vous, un tableau de conformité et de non-conformité.</p>
+<p>Commencez par rechercher tous les éléments importants présents dans la pièce pour comprendre la situation.</p>
+<p>Ensuite, complétez la feuille posée devant vous avec vos premières hypothèses.</p>
+<p>Prenez le temps de discuter en équipe : confrontez vos idées, débattez des meilleures réponses.</p>
+<p>Une fois votre décision prise, saisissez vos réponses sur la tablette pour valider votre choix.</p>
+<p><strong>Attention :</strong> votre temps est compté…</p>
+</div>
 <div id="timer" class="timer-container"></div>
 <form id="quiz-form">
 <table>
