--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <p>Ensuite, complétez la feuille posée devant vous avec vos premières hypothèses.</p>
 <p>Prenez le temps de discuter en équipe : confrontez vos idées, débattez des meilleures réponses.</p>
 <p>Une fois votre décision prise, saisissez vos réponses sur la tablette pour valider votre choix.</p>
-<p><strong>Attention :</strong> votre temps est compté…</p>
+<p><strong>Attention : votre temps est compté… </strong></p>
 </div>
 <div id="timer" class="timer-container"></div>
 <form id="quiz-form">
