--- a/association.html
+++ b/association.html
@@ -48,18 +48,18 @@
 <div class="association-container" id="jeu-association" style="display: none;">
 <h2>Associe chaque image au mot correspondant</h2>
 <div class="images-zone">
-<div class="drop-zone" data-correct="EPI"><img src="images/casque.png"></div>
-<div class="drop-zone" data-correct="Non-conformité"><img src="images/desordre.png"></div>
-<div class="drop-zone" data-correct="Consigne"><img src="images/consigne.png"></div>
-<div class="drop-zone" data-correct="Propreté"><img src="images/nettoyage.png"></div>
-<div class="drop-zone" data-correct="Danger"><img src="images/danger.png"></div>
-<div class="drop-zone" data-correct="Formation"><img src="images/formation.png"></div>
-<div class="drop-zone" data-correct="Machine"><img src="images/machine.png"></div>
-<div class="drop-zone" data-correct="Produit chimique"><img src="images/produit.png"></div>
+<div class="drop-zone" data-correct="EPI"><img src="images/Comburant.gif"></div>
+<div class="drop-zone" data-correct="Non-conformité"><img src="images/Corrosif.gif"></div>
+<div class="drop-zone" data-correct="Consigne"><img src="images/Danger pour l'environnement.gif"></div>
+<div class="drop-zone" data-correct="Propreté"><img src="images/Danger pour la santé.gif"></div>
+<div class="drop-zone" data-correct="Danger"><img src="images/Explosif.gif"></div>
+<div class="drop-zone" data-correct="Formation"><img src="images/Gaz sous pression.gif"></div>
+<div class="drop-zone" data-correct="Machine"><img src="images/inflammable.gif"></div>
+<div class="drop-zone" data-correct="Produit chimique"><img src="images/Nocif ou irritant.gif"></div>
 <div class="drop-zone" data-correct="Tri sélectif"><img src="images/tri.png"></div>
 </div>
 <div class="mots-zone">
-<div class="draggable" draggable="true" data-word="EPI">EPI</div>
+<div class="draggable" draggable="true" data-word="Comburant">Comburant</div>
 <div class="draggable" draggable="true" data-word="Non-conformité">Non-conformité</div>
 <div class="draggable" draggable="true" data-word="Consigne">Consigne</div>
 <div class="draggable" draggable="true" data-word="Propreté">Propreté</div>
