--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 <p>Prenez le temps de discuter en équipe : confrontez vos idées, débattez des meilleures réponses.</p>
 <p>Une fois votre décision prise, saisissez vos réponses sur la tablette pour valider votre choix.</p>
 <p><strong>Attention :</strong> votre temps est compté…</p>
-<p><strong>Attention : votre temps est compté… </strong></p>
 </div>
 <div id="timer" class="timer-container"></div>
 <form id="quiz-form">
@@ -28,7 +27,7 @@
 </tr>
 </thead>
 <tbody id="table-body">
-<!-- Dynamically filled by JS -->
+<!-- Rempli dynamiquement par JavaScript -->
 </tbody>
 </table>
 <button type="button" onclick="validerReponses()">Valider</button>
@@ -38,3 +37,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+ 
