--- a/association.html
+++ b/association.html
@@ -91,9 +91,9 @@
 <div class="drop-zone" data-correct="Propreté"><img src="images/Danger pour la santé.gif"></div>
 <div class="drop-zone" data-correct="Danger"><img src="images/Explosif.gif"></div>
 <div class="drop-zone" data-correct="Formation"><img src="images/Gaz sous pression.gif"></div>
-<div class="drop-zone" data-correct="Machine"><img src="images/inflammable.gif"></div>
+<div class="drop-zone" data-correct="Machine"><img src="images/Inflammable.gif"></div>
 <div class="drop-zone" data-correct="Produit chimique"><img src="images/Nocif ou irritant.gif"></div>
-<div class="drop-zone" data-correct="Tri sélectif"><img src="images/tri.png"></div>
+<div class="drop-zone" data-correct="Tri sélectif"><img src="images/Toxique.gif"></div>
 </div>
 <div class="mots-zone">
 <div class="draggable" draggable="true" data-word="Comburant">Comburant</div>
