--- a/association.html
+++ b/association.html
@@ -101,7 +101,7 @@
 <div class="draggable" draggable="true" data-word="Corrosif">Corrosif</div>
 <div class="draggable" draggable="true" data-word="Gaz sous pression">Gaz sous pression</div>
 <div class="draggable" draggable="true" data-word="Explosif">Explosif</div>
-<div class="draggable" draggable="true" data-word="Comburant">Comburant</div>
+<div class="draggable" draggable="true" data-word="Toxique">Toxique</div>
 <div class="draggable" draggable="true" data-word="Inflammable">Inflammable</div>
 <div class="draggable" draggable="true" data-word="Nocif ou irritant">Nocif ou irritant</div>
 <div class="draggable" draggable="true" data-word="Danger pour l’environnement">Danger pour l’environnement</div>
