--- a/association.html
+++ b/association.html
@@ -87,14 +87,14 @@
 <h2>Associe chaque image au mot correspondant</h2>
 <div class="images-zone">
 <div class="drop-zone" data-correct="Comburant"><img src="images/Comburant.gif"></div>
-<div class="drop-zone" data-correct="Non-conformité"><img src="images/Corrosif.gif"></div>
-<div class="drop-zone" data-correct="Consigne"><img src="images/Danger pour l'environnement.gif"></div>
-<div class="drop-zone" data-correct="Propreté"><img src="images/Danger pour la santé.gif"></div>
-<div class="drop-zone" data-correct="Danger"><img src="images/Explosif.gif"></div>
-<div class="drop-zone" data-correct="Formation"><img src="images/Gaz sous pression.gif"></div>
-<div class="drop-zone" data-correct="Machine"><img src="images/Inflammable.gif"></div>
-<div class="drop-zone" data-correct="Produit chimique"><img src="images/Nocif ou irritant.gif"></div>
-<div class="drop-zone" data-correct="Tri sélectif"><img src="images/Toxique.gif"></div>
+<div class="drop-zone" data-correct="Corrosif"><img src="images/Corrosif.gif"></div>
+<div class="drop-zone" data-correct="Danger pour l’environnement"><img src="images/Danger pour l'environnement.gif"></div>
+<div class="drop-zone" data-correct="Danger pour la santé"><img src="images/Danger pour la santé.gif"></div>
+<div class="drop-zone" data-correct="Explosif"><img src="images/Explosif.gif"></div>
+<div class="drop-zone" data-correct="Gaz sous pression"><img src="images/Gaz sous pression.gif"></div>
+<div class="drop-zone" data-correct="Inflammable"><img src="images/Inflammable.gif"></div>
+<div class="drop-zone" data-correct="Nocif ou irritant"><img src="images/Nocif ou irritant.gif"></div>
+<div class="drop-zone" data-correct="Toxique"><img src="images/Toxique.gif"></div>
 </div>
 <div class="mots-zone">
 <div class="draggable" draggable="true" data-word="Comburant">Comburant</div>
