--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <p><strong>Attention :</strong> votre temps est compté…</p>
 </div>
 <div id="timer" class="timer-container"></div>
+<button id="resetCountdown" type="button">Réinitialiser le temps</button>
 <form id="quiz-form">
 <table>
 <thead>
@@ -27,7 +28,6 @@
 </tr>
 </thead>
 <tbody id="table-body">
-<!-- Rempli dynamiquement par JavaScript -->
 </tbody>
 </table>
 <button type="button" onclick="validerReponses()">Valider</button>
@@ -37,4 +37,3 @@
 <script src="script.js"></script>
 </body>
 </html>
- 
