--- a/association.html
+++ b/association.html
@@ -3,75 +3,93 @@
 <head>
 <meta charset="UTF-8">
 <title>Association Images et Mots</title>
-<link rel="stylesheet" href="style.css">
-<style>
-    .association-container {
-      text-align: center;
-      padding: 20px;
-      color: white;
-    }
-    .images-zone, .mots-zone {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 20px;
-      margin: 20px 0;
-    }
-    .drop-zone {
-      border: 2px dashed #ccc;
-      padding: 10px;
-      width: 150px;
-      height: 150px;
-      background-color: rgba(255,255,255,0.1);
-      position: relative;
-    }
-    .drop-zone img {
-      max-width: 100%;
-      height: auto;
-    }
-    .draggable {
-      background-color: #002bff;
-      color: white;
-      padding: 10px 15px;
-      border-radius: 8px;
-      cursor: grab;
-      user-select: none;
-    }
-    #feedback {
-      margin-top: 20px;
-      font-size: 1.2rem;
-      font-weight: bold;
-    }
+<link rel="stylesheet" href="style.css"> <style>
+    /* Styles spécifiques à cette page */
+    .association-container {
+      text-align: center;
+      padding: 20px;
+      color: white; /* Assurez-vous que la couleur du texte contraste avec votre fond */
+    }
+    .images-zone, .mots-zone {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+      margin: 20px 0;
+    }
+    .drop-zone {
+      border: 2px dashed #ccc;
+      padding: 10px;
+      width: 150px;
+      height: 150px;
+      background-color: rgba(255,255,255,0.1);
+      position: relative;
+      display: flex; /* Pour centrer l'image si elle est plus petite */
+      justify-content: center;
+      align-items: center;
+    }
+    .drop-zone img {
+      max-width: 100%;
+      max-height: 100%; /* S'assurer que l'image ne dépasse pas */
+      height: auto;
+    }
+    .draggable {
+      background-color: #002bff;
+      color: white;
+      padding: 10px 15px;
+      border-radius: 8px;
+      cursor: grab;
+      user-select: none;
+      min-width: 120px; /* Pour éviter que les mots ne soient trop petits */
+      text-align: center;
+    }
+    #feedback {
+      margin-top: 20px;
+      font-size: 1.2rem;
+      font-weight: bold;
+    }
+    /* Styles pour le timer (à ajouter si non présent dans style.css) */
+    .timer-container {
+        font-size: 2em;
+        font-weight: bold;
+        color: #fff; /* Couleur du texte du timer */
+        text-align: center;
+        margin-bottom: 20px;
+        background-color: rgba(0, 0, 0, 0.5); /* Fond semi-transparent pour le timer */
+        padding: 10px;
+        border-radius: 8px;
+    }
 </style>
 </head>
 <body>
 <div id="timer" class="timer-container"></div>
+
 <div class="association-container" id="jeu-association">
-<h2>Associe chaque image au mot correspondant</h2>
-<div class="images-zone">
-<div class="drop-zone" data-correct="Comburant"><img src="images/Comburant.gif"></div>
-<div class="drop-zone" data-correct="Corrosif"><img src="images/Corrosif.gif"></div>
-<div class="drop-zone" data-correct="Danger pour l’environnement"><img src="images/Danger pour l'environnement.gif"></div>
-<div class="drop-zone" data-correct="Danger pour la santé"><img src="images/Danger pour la santé.gif"></div>
-<div class="drop-zone" data-correct="Explosif"><img src="images/Explosif.gif"></div>
-<div class="drop-zone" data-correct="Gaz sous pression"><img src="images/Gaz sous pression.gif"></div>
-<div class="drop-zone" data-correct="Inflammable"><img src="images/Inflammable.gif"></div>
-<div class="drop-zone" data-correct="Nocif ou irritant"><img src="images/Nocif ou irritant.gif"></div>
-<div class="drop-zone" data-correct="Toxique"><img src="images/Toxique.gif"></div>
-</div>
-<div class="mots-zone">
-<div class="draggable" draggable="true" data-word="Comburant">Comburant</div>
-<div class="draggable" draggable="true" data-word="Danger pour la santé">Danger pour la santé</div>
-<div class="draggable" draggable="true" data-word="Corrosif">Corrosif</div>
-<div class="draggable" draggable="true" data-word="Gaz sous pression">Gaz sous pression</div>
-<div class="draggable" draggable="true" data-word="Explosif">Explosif</div>
-<div class="draggable" draggable="true" data-word="Toxique">Toxique</div>
-<div class="draggable" draggable="true" data-word="Inflammable">Inflammable</div>
-<div class="draggable" draggable="true" data-word="Nocif ou irritant">Nocif ou irritant</div>
-<div class="draggable" draggable="true" data-word="Danger pour l’environnement">Danger pour l’environnement</div>
-</div>
-<button onclick="validerAssociations()">Valider</button>
-<div id="feedback"></div>
+    <h2>Associe chaque image au mot correspondant</h2>
+    <div class="images-zone">
+        <div class="drop-zone" data-correct="Comburant"><img src="images/Comburant.gif" alt="Symbole Comburant"></div>
+        <div class="drop-zone" data-correct="Corrosif"><img src="images/Corrosif.gif" alt="Symbole Corrosif"></div>
+        <div class="drop-zone" data-correct="Danger pour l’environnement"><img src="images/Danger pour l'environnement.gif" alt="Symbole Danger environnement"></div>
+        <div class="drop-zone" data-correct="Danger pour la santé"><img src="images/Danger pour la santé.gif" alt="Symbole Danger santé"></div>
+        <div class="drop-zone" data-correct="Explosif"><img src="images/Explosif.gif" alt="Symbole Explosif"></div>
+        <div class="drop-zone" data-correct="Gaz sous pression"><img src="images/Gaz sous pression.gif" alt="Symbole Gaz sous pression"></div>
+        <div class="drop-zone" data-correct="Inflammable"><img src="images/Inflammable.gif" alt="Symbole Inflammable"></div>
+        <div class="drop-zone" data-correct="Nocif ou irritant"><img src="images/Nocif ou irritant.gif" alt="Symbole Nocif ou irritant"></div>
+        <div class="drop-zone" data-correct="Toxique"><img src="images/Toxique.gif" alt="Symbole Toxique"></div>
+    </div>
+    <div class="mots-zone">
+        <div class="draggable" draggable="true" data-word="Comburant">Comburant</div>
+        <div class="draggable" draggable="true" data-word="Danger pour la santé">Danger pour la santé</div>
+        <div class="draggable" draggable="true" data-word="Corrosif">Corrosif</div>
+        <div class="draggable" draggable="true" data-word="Gaz sous pression">Gaz sous pression</div>
+        <div class="draggable" draggable="true" data-word="Explosif">Explosif</div>
+        <div class="draggable" draggable="true" data-word="Toxique">Toxique</div>
+        <div class="draggable" draggable="true" data-word="Inflammable">Inflammable</div>
+        <div class="draggable" draggable="true" data-word="Nocif ou irritant">Nocif ou irritant</div>
+        <div class="draggable" draggable="true" data-word="Danger pour l’environnement">Danger pour l’environnement</div>
+    </div>
+    <button onclick="validerAssociations()">Valider</button>
+    <div id="feedback"></div>
 </div>
 
 <script>
@@ -83,11 +101,14 @@
         // Récupère le temps restant, s'il n'existe pas, initialise à 0 ou à une valeur par défaut
         let timeLeft = parseInt(localStorage.getItem("timeLeft"), 10);
 
-        // Si le temps n'est pas défini ou est négatif (déjà écoulé),
-        // on pourrait décider de ne pas afficher de compte à rebours ou de le laisser à "écoulé"
+        // Si le temps n'est pas défini, est négatif (déjà écoulé), ou est zéro,
+        // on l'affiche comme écoulé et on nettoie.
         if (isNaN(timeLeft) || timeLeft <= 0) {
             timerElement.textContent = "⏳ Temps écoulé !";
             localStorage.removeItem("timeLeft"); // Nettoie le localStorage si le temps est écoulé
+            // Optionnel: désactiver le jeu si le temps est écoulé
+            // document.getElementById('jeu-association').style.pointerEvents = 'none';
+            // alert("Le temps est écoulé !");
             return; // Arrête la fonction si le temps est déjà écoulé
         }
 
@@ -99,6 +120,7 @@
         countdownInterval = setInterval(() => {
             const min = Math.floor(timeLeft / 60);
             const sec = timeLeft % 60;
+            // Affiche le temps avec les secondes sur deux chiffres (ex: 5:03)
             timerElement.textContent = `⏳ Temps restant : ${min}:${sec < 10 ? "0" : ""}${sec} ⏳`;
 
             localStorage.setItem("timeLeft", timeLeft); // Sauvegarde à chaque tick
@@ -107,7 +129,9 @@
                 clearInterval(countdownInterval);
                 timerElement.textContent = "⏳ Temps écoulé !";
                 localStorage.removeItem("timeLeft"); // Nettoyage
-                // Ici, tu pourrais ajouter une action, comme désactiver le jeu
+                // Optionnel: désactiver le jeu si le temps est écoulé
+                // document.getElementById('jeu-association').style.pointerEvents = 'none';
+                // alert("Le temps est écoulé !");
                 return;
             }
 
@@ -115,25 +139,41 @@
         }, 1000);
     }
 
-
+    // --- Logique de glisser-déposer ---
     const draggables = document.querySelectorAll('.draggable');
     const dropZones = document.querySelectorAll('.drop-zone');
 
     draggables.forEach(drag => {
       drag.addEventListener('dragstart', e => {
         e.dataTransfer.setData('text/plain', drag.getAttribute('data-word'));
+        // Optionnel: ajouter une classe pour styliser l'élément en cours de glissement
+        drag.classList.add('is-dragging');
+      });
+      drag.addEventListener('dragend', e => {
+        // Optionnel: retirer la classe une fois le glissement terminé
+        drag.classList.remove('is-dragging');
       });
     });
 
     dropZones.forEach(zone => {
-      zone.addEventListener('dragover', e => e.preventDefault());
+      zone.addEventListener('dragover', e => e.preventDefault()); // Permet le drop
       zone.addEventListener('drop', e => {
         e.preventDefault();
         const droppedWord = e.dataTransfer.getData('text/plain');
+
+        // Empêcher de déposer un mot si la zone contient déjà un mot
+        if (zone.querySelector('.dropped-label')) {
+            // Optionnel: Remettre le mot à sa place d'origine ou l'ignorer
+            return;
+        }
+
+        // Marque la zone avec le mot déposé
         zone.setAttribute('data-user', droppedWord);
 
+        // Crée ou met à jour l'étiquette du mot déposé
         const label = document.createElement('div');
         label.textContent = droppedWord;
+        label.classList.add('dropped-label'); // Ajoute une classe pour cibler plus facilement
         label.style.cssText = `
           position: absolute;
           bottom: 5px;
@@ -147,13 +187,18 @@
           font-size: 0.9rem;
         `;
 
-        zone.querySelectorAll('div').forEach(div => {
-          if (div !== zone.firstElementChild) div.remove();
-        });
+        // Supprime l'ancien label si existant (au cas où, bien que le preventer ci-dessus soit mieux)
+        zone.querySelectorAll('.dropped-label').forEach(div => div.remove());
         zone.appendChild(label);
+
+        // Optionnel: Déplacer l'élément draggable de sa zone d'origine vers la drop-zone
+        // Pour cela, il faudrait qu'un mot déposé ne puisse plus être glissé ou qu'il soit "consommé"
+        // Pour l'instant, le mot reste dans mots-zone, mais un label s'affiche dans la drop-zone.
+        // Si tu veux que le mot disparaisse de la mots-zone, c'est plus complexe (manipulation de la source du drag)
       });
     });
 
+    // --- Logique de validation ---
     function validerAssociations() {
       let score = 0;
       dropZones.forEach(zone => {
@@ -166,16 +211,17 @@
       if (score === dropZones.length) {
         feedback.textContent = `Bravo ! Toutes les associations sont correctes.`;
         feedback.style.color = 'lightgreen';
-        // Tu peux choisir de nettoyer le temps si le jeu est réussi
+        // Nettoie le temps si le jeu est réussi pour éviter de le reprendre plus tard
         localStorage.removeItem("timeLeft");
-        // Et éventuellement rediriger vers une autre page
+        // Optionnel: Rediriger ou afficher un message de fin de jeu
+        // window.location.href = "page_de_fin.html";
       } else {
         feedback.textContent = `${score} bonnes réponses sur ${dropZones.length}. Essayez encore !`;
         feedback.style.color = 'orange';
       }
     }
 
-    // Lance le compte à rebours au chargement de la page
+    // --- Lancement du compte à rebours au chargement de la page ---
     window.onload = function () {
         startCountdownFromStorage();
     };
