--- a/association.html
+++ b/association.html
@@ -209,7 +209,7 @@
 
       const feedback = document.getElementById('feedback');
       if (score === dropZones.length) {
-        feedback.textContent = `Bravo ! Toutes les associations sont correctes.`;
+        feedback.textContent = `Bravo !  Le mot code est: Encre`;
         feedback.style.color = 'lightgreen';
         // Nettoie le temps si le jeu est réussi pour éviter de le reprendre plus tard
         localStorage.removeItem("timeLeft");
