--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
 <h2>Vrai ou Faux ?</h2>
 <div class="instructions">
 <p>Devant vous, un tableau de conformité et de non-conformité.</p>
-<p>Commencez par rechercher tous les éléments importants présents dans la pièce pour comprendre la situation.</p>
-<p>Ensuite, complétez la feuille posée devant vous avec vos premières hypothèses.</p>
-<p>Prenez le temps de discuter en équipe : confrontez vos idées, débattez des meilleures réponses.</p>
-<p>Une fois votre décision prise, saisissez vos réponses sur la tablette pour valider votre choix.</p>
+<p>1/ Lissez et vérifiez que tous les auto-contrôles sont corrects</p>
+<p>2/ Complétez la feuille posée devant vous avec vos premières hypothèses.</p>
+<p>3/ Une fois votre décision prise, saisissez vos réponses sur la tablette pour valider votre choix.</p>
 <p><strong>Attention :</strong> votre temps est compté…</p>
 </div>
 <div id="timer" class="timer-container"></div>
