--- a/index.html
+++ b/index.html
@@ -1,38 +1,34 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-<meta charset="UTF-8">
-<title>Vrai ou Faux - Escape Game</title>
-<link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>Vrai ou Faux - Escape Game</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="container">
-<h2>Vrai ou Faux ?</h2>
-<div class="instructions">
-<p>Devant vous, un tableau de conformité et de non-conformité.</p>
-<p>1/ Lissez et vérifiez que tous les auto-contrôles sont corrects</p>
-<p>2/ Complétez la feuille posée devant vous avec vos premières hypothèses.</p>
-<p>3/ Une fois votre décision prise, saisissez vos réponses sur la tablette pour valider votre choix.</p>
-<p><strong>Attention :</strong> votre temps est compté…</p>
-</div>
-<div id="timer" class="timer-container"></div>
-<button id="resetCountdown" type="button">Réinitialiser le temps</button>
-<form id="quiz-form">
-<table>
-<thead>
-<tr>
-<th>Nom du Contrôle</th>
-<th>Conforme</th>
-<th>Non Conforme</th>
-</tr>
-</thead>
-<tbody id="table-body">
-</tbody>
-</table>
-<button type="button" onclick="validerReponses()">Valider</button>
-</form>
-<div id="resultat"></div>
-</div>
-<script src="script.js"></script>
+  <div class="container">
+    <h2>Vrai ou Faux ?</h2>
+    <div class="instructions">
+      <p>Devant vous, un tableau de conformité et de non-conformité.</p>
+      <p>1/ Lissez et vérifiez que tous les auto-contrôles sont corrects</p>
+      <p>2/ Complétez la feuille posée devant vous avec vos premières hypothèses.</p>
+      <p>3/ Une fois votre décision prise, saisissez vos réponses sur la tablette pour valider votre choix.</p>
+    </div>
+    <form id="quiz-form">
+      <table>
+        <thead>
+          <tr>
+            <th>Nom du Contrôle</th>
+            <th>Conforme</th>
+            <th>Non Conforme</th>
+          </tr>
+        </thead>
+        <tbody id="table-body"></tbody>
+      </table>
+      <button type="button" onclick="validerReponses()">Valider</button>
+    </form>
+    <div id="resultat"></div>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
