--- a/association.html
+++ b/association.html
@@ -162,5 +162,9 @@
     // Plus de minuterie
   };
 </script>
+  <div id="popup-code" class="popup hidden">
+  <p>Bravo ! Le mot code est : <strong>Encre</strong></p>
+</div>
+
 </body>
 </html>
