--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <p>1/ Lissez et vérifiez que tous les auto-contrôles sont corrects</p>
       <p>2/ Complétez la feuille posée devant vous avec vos premières hypothèses.</p>
       <p>3/ Une fois votre décision prise, saisissez vos réponses sur la tablette pour valider votre choix.</p>
+      <p>Attention : votre temps est compté…</p>
     </div>
     <form id="quiz-form">
       <table>
